test/types/unions/bad-access2.good
bad-access2.chpl:8: error: halt reached - illegal union access: no field is active
